# GameEngineEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake_multi_platform.yml
Editor/: CMakeLists.txt
Editor/include/GameEngineEditor/: Application.h  AssetBrowser.h  EditorApplication.h  EditorTypes.h  EntityTreeNode.cpp  EntityTreeNode.h  FilePayload.h  HierarchyEntityPanel.h  PropertyInspectorPanel.h  ReflectedVarRenderer.h  TreeNode.h  TreeNodeRenderer.h
Editor/src/: Application.cpp  AssetBrowser.cpp  EditorApplication.cpp  EditorMain.cpp  HierarchyEntityPanel.cpp  ReflectedVarRenderer.cpp  TreeNode.cpp  TreeNodeRenderer.cpp
Engine/: CMakeLists.txt
Engine/examples/: CMakeLists.txt  Main.cpp
Engine/include/EcsSerializer/: Component.h  ComponentFactory.h  EngineComponents.h  Entity.h  ReflectedVar.h  WImage.h  World.h
Engine/src/: ComponentFactory.cpp  Entity.cpp  WImage.cpp  World.cpp
include/GameEngineEditor/: EditorApplication.h  HierarchyEntityPanel.h  PropertyInspectorPanel.h  ReflectedVarRenderer.h  TreeNode.h
src/: AssetBrowser.cpp  EditorApplication.cpp  TreeNode.cpp
